# stream_poc

./: .gdb_history  .gitignore  AVConvert.cpp  AVConvert.hpp  CMakeLists.txt  README.md  audio_config.cpp  audio_config.hpp  audio_context.cpp  audio_context.hpp  audio_converter.cpp  audio_converter.hpp  audio_device.cpp  audio_device.hpp  audio_device_config.cpp  audio_video_streams.cpp  audio_video_streams.hpp  av_convert.cpp  av_convert.hpp  av_data.cpp  av_data.hpp  av_output_stream.cpp  av_output_stream.hpp  av_settings.cpp  av_settings.hpp  cmake_install.cmake  connection.cpp  lock_free_audio_queue.cpp  lock_free_audio_queue.hpp  main.cpp  t.c  udp_conn.hpp  webcam.cpp  webcam.hpp
old/: audio_device.cpp  audio_device.hpp  av_output_stream.cpp  av_output_stream.hpp
opencv_de_en_code/client/: CMakeLists.txt  main.cpp  webcam.cpp  webcam.hpp
opencv_de_en_code/server/: CMakeLists.txt  main.cpp  webcam.cpp
